src/objects/ACET_ChageCaseOwner__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Profile_Role_Available__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile/Role Available</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile/Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Queue_API_name_contains__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Queue API name contains</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Update__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Update</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ACET ChangeCase Owner</label>
</CustomObject>